# Minerva

./: .gitignore  AGENTS.md  Cargo.toml  install-minerva  new_tasks  results
crates/minerva-cli/: Cargo.toml
crates/minerva-cli/src/: cli.rs  context_command.rs  context_output.rs  delete_command.rs  exit_code.rs  hierarchy_command.rs  hierarchy_output.rs  list_args.rs  list_command.rs  list_output.rs  log_command.rs  log_output.rs  main.rs  migrate_output.rs  move_command.rs  new_command.rs  new_prompt.rs  new_resolve.rs  output.rs  relationship_command.rs  relationship_output.rs  repair_output.rs  response.rs  run.rs  show_output.rs  status_args.rs  status_command.rs  task_ref_arg.rs  tree_args.rs  tree_command.rs  tree_output.rs  validate_command.rs  validate_output.rs
crates/minerva-cli/tests/: context_cli.rs  core_cli.rs  delete_cli.rs  init_cli.rs  instruction_cli.rs  migrate_cli.rs  new_cli.rs  new_cli_interactive.rs  rebuild_cli.rs  repair_cli.rs  task_declaration_cli.rs  task_hierarchy_cli.rs  task_instruction_cli.rs  task_list_cli.rs  task_log_cli.rs  task_show_cli.rs  task_show_json_cli.rs  task_status_cli.rs  task_tree_cli.rs  validate_cli.rs
crates/minerva-context/: Cargo.toml
crates/minerva-context/src/: context_budget.rs  context_budget_error.rs  context_budget_report.rs  context_compilation_collections.rs  context_compilation_error.rs  context_compilation_freshness.rs  context_compilation_render.rs  context_compilation_request.rs  context_compilation_result.rs  context_compilation_sections.rs  context_compilation_service.rs  context_compilation_task_sections.rs  context_document.rs  context_exclusion_reason.rs  context_execution_contract.rs  context_graph_selection.rs  context_graph_selector.rs  context_inclusion_reason.rs  context_manifest.rs  context_section.rs  context_section_exclusion.rs  context_section_id.rs  context_selection_item.rs  lib.rs  task_context_render.rs  token_estimator.rs
crates/minerva-context/tests/: context_budget.rs  context_compilation_budget.rs  context_compilation_service.rs  context_compilation_stale.rs  context_graph.rs  context_sections.rs
crates/minerva-storage/: Cargo.toml
crates/minerva-tui/: Cargo.toml
(+283 files in other folders)
