[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.88"
version = "0.1.0"

[workspace.dependencies]
minerva-application = { path = "crates/minerva-application" }
minerva-context = { path = "crates/minerva-context" }
minerva-domain = { path = "crates/minerva-domain" }
minerva-storage = { path = "crates/minerva-storage" }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
