[package]
name = "minerva-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
minerva-application.workspace = true
minerva-domain.workspace = true
minerva-storage.workspace = true
serde_json = "1.0.145"
humantime = "2.3.0"

[lints]
workspace = true
