[package]
name = "minerva-context"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
minerva-application.workspace = true
minerva-domain.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
sha2 = "0.10.9"

[dev-dependencies]
minerva-storage.workspace = true

[lints]
workspace = true
